[package]
name = "power-stage-tester"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
btoi = { version = "0.4.2", default-features = false }
no-std-compat = "0.4.1"
bitbang-hal = "0.3.2"

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f405"]

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations